  English strings when LANG would indicate translation;
  also recognize environment variable GRETL_LANG: if this
  is "english" or "C", run in English
- allow for missing values (silent) in audio graphs
- add a few keystrokes to the main gretl window:
  'a': audio (read list of variables)
  'x': stop audio
  'e': edit attributes of current variable
  't': plot current variable

5/25/2004 version 1.2.6
- add Hodrick-Prescott filter, as "hpfilt" function in the
  genr command
- revamp xls importer: should now be substantially more
  robust
- begin adding experimental audio graph feature for visually
  impaired users
- improve handling of non-ASCII characters in data files
- fixes for Spanish help files
- more fixes for build process
- GNU Octave data export: write all data as single matrix
- fix printing of "periods" in periodogram output (thanks to
  Tadeusz Kufel)
- fix generation of periodic dummy variables for daily data
  (again thanks to Tadeusz Kufel)
- with gtk >= 2.4.0 on Linux, use the new gtk file chooser
- update the Windows gtk version to 2.4.1

5/04/2004 version 1.2.5
- fix problem with acf and pacf calculations
- add Prais-Winsten estimator for AR1 models ("pwe" command)
- fix bugs in gretl "graph page"
- fix some translation bugs
- fix headers for compilation on Mac OS X
- fix bug in lmtest option handling
- make Excel importer a little more robust
- bug fix for saving data files with very large number
  of variables (tested with 548)
- bug fix for "diff" and "ldiff" commands with panel data in the
  form of stacked cross-sections
- plain text output: give option of copying as RTF (puts the
  output into Courier New at 9 points)
- in gui, disallow deleting variables when sub-sampled
- setobs command: be more flexible in regard to the format of
  the "startobs" field
- saving text files: try to improve handling of CR/LF
- minor fixes to model printing
- gnuplot fix: make copy-and-paste into Microsoft applications